tests/negative/parser/prefix_rsquare.orng
fn main() -> Int {
    let x = [let y = 4]Int
    0
}